# protobuf-sgx

./: README-SGX.md  README.md
src/google/protobuf/: CMakeLists.txt  arena_impl.h  arenastring.h  descriptor.cc  empty.edl  generated_message_util.cc  message.cc  message.h  message_lite.cc  message_lite.h  text_format.cc
src/google/protobuf/io/: coded_stream.h  strtod.cc  zero_copy_stream_impl.cc  zero_copy_stream_impl.h  zero_copy_stream_impl_lite.cc
src/google/protobuf/stubs/: byteswap.h  common.cc  int128.cc  int128.h  mutex.h  port.h  status.cc  status.h  stringpiece.cc  stringpiece.h  strutil.cc  time.cc
src/google/protobuf/util/: delimited_message_util.cc  delimited_message_util.h  message_differencer.cc  time_util.h
